--- a/app/views/tweets/index.html.erb
+++ b/app/views/tweets/index.html.erb
@@ -6,16 +6,28 @@
     <p>
         <%= e.user_id %>
         <%= e.message %>
-        <%= link_to 'いいね', likes_path(tweet_id: e.id), data: { "turbo-method": :post } %>
-        <%= link_to 'いいね削除', like_path(e), data: { "turbo-method": :delete } %>
-        <%= link_to '削除', tweet_path(e), data: { turbo_method: :delete } %>
+        <% if current_user %>
+            <%= link_to '削除', tweet_path(e), data: { turbo_method: :delete } %>
+            <% if e.liked?(current_user) %>
+                <%= link_to 'いいね削除', like_path(e), data: { "turbo-method": :delete } %>
+            <% else %>
+                <%= link_to 'いいね', likes_path(tweet_id: e.id), data: { "turbo-method": :post } %>
+            <% end %>
+        <% end %>
     </p>
 <% end %>
-
-<%= form_for @tweet , url: {action: :create} do |f| %>
-    <%= f.label :message, 'メッセージ' %>
-    <%= f.text_field :message %>
-    <%= f.submit 'ツイート' %>
+<hr>
+<% if current_user %>
+    <%= form_for @tweet , url: {action: :create} do |f| %>
+        <%= f.label :message, 'メッセージ' %>
+        <%= f.text_field :message %>
+        <%= f.submit 'ツイート' %>
+    <% end %>
 <% end %>
-
-<%= link_to "ログアウト", top_logout_path%>
+<hr>
+<p><%= link_to 'ユーザー一覧', users_path%></p>
+<% if current_user %>
+    <p><%= link_to "ログアウト", top_logout_path%></p>
+<% else %>
+    <p><%= link_to "ログイン", top_main_path%></p>
+<% end %>
